@@ -128,3 +128,8 @@ CONFIG_NOTIFICATION_TIME_LABEL="Notification time"
 CONFIG_NOTIFICATION_TIME_MIN="minutes"
 CONFIG_NOTIFICATION_TIME_HOUR="hours"
 CONFIG_NOTIFICATION_TIME_DAY="days"
+
+COM_DOCIMPORT_CONFIG_BASIC_LABEL="Basic"
+COM_DOCIMPORT_CONFIG_BASIC_DESC="Basic configuration options"
+COM_DOCIMPORT_CONFIG_MEDIAROOT_LABEL="Books folder"
+COM_DOCIMPORT_CONFIG_MEDIAROOT_DESC="The subdirectory of the site's media folder where books are located in"
